# feature_refactor_prototype

prottype/Vss-App-Rc_161H/export/: biz_ptzf_if.h  biz_ptzf_if_mock.h
prottype/Vss-App-Rc_161H/userspace/application/: application_manager_entry.cpp
prottype/Vss-App-Rc_161H/userspace/biz_ptzf/: CMakeLists.txt  biz_ptzf_if.cpp  biz_ptzf_if_mock.cpp
prottype/Vss-App-Rc_161H/userspace/biz_ptzf/test/: biz_ptzf_if_target_test.cpp  biz_ptzf_if_test.cpp
prottype/Vss-App-Rc_161H/userspace/inc/ptzf/: ptzf_config_if.h  ptzf_config_if_mock.h  ptzf_message.h  ptzf_status_if.h  ptzf_status_if_mock.h
prottype/Vss-App-Rc_161H/userspace/inc_export/: まだ途中biz_ptzf_if.h
prottype/Vss-App-Rc_161H/userspace/power/infra/: power_sequencer_reboot_infra_if_marco.cpp
prottype/Vss-App-Rc_161H/userspace/power/infra/test/: power_sequencer_reboot_infra_if_marco_test.cpp
prottype/Vss-App-Rc_161H/userspace/preset/: CMakeLists.txt
prottype/Vss-App-Rc_161H/userspace/preset/infra/: CMakeLists.txt  preset_database_backup_infra_message_handler_marco.cpp  preset_database_backup_infra_message_handler_marco.h  preset_database_backup_infra_message_handler_marco_fake.cpp
prottype/Vss-App-Rc_161H/userspace/preset/infra/test/: preset_database_backup_infra_if_marco_test.cpp  preset_database_backup_infra_message_handler_marco_test.cpp  preset_infra_message_handler_marco_test.cpp
prottype/Vss-App-Rc_161H/userspace/preset/test/: preset_manager_message_handler_new_test.cpp
prottype/Vss-App-Rc_161H/userspace/ptzf/: CMakeLists.txt  pan_tilt_limit_info_notifier_fake.cpp  pan_tilt_limit_position.cpp  pan_tilt_value_manager.cpp  ptzf_config.cpp  ptzf_config_if.cpp  ptzf_config_if_mock.cpp  ptzf_config_infra_if.h  ptzf_config_infra_if_fake.cpp  ptzf_config_infra_if_mock.cpp  ptzf_config_infra_if_mock.h  ptzf_controller.cpp  ptzf_controller.h  ptzf_controller_message_handler.cpp  ptzf_controller_message_handler.h  ptzf_controller_mock.cpp  ptzf_status_if.cpp  ptzf_status_if_mock.cpp  ptzf_status_infra_if.h  ptzf_status_infra_if_fake.cpp  ptzf_status_infra_if_mock.cpp  ptzf_status_infra_if_mock.h
prottype/Vss-App-Rc_161H/userspace/ptzf/infra/: CMakeLists.txt  ptzf_config_infra_if.cpp  ptzf_status_infra_if.cpp  ptzf_status_infra_if_no_save_last_position.cpp  ptzf_status_infra_if_save_last_position.cpp
prottype/Vss-App-Rc_161H/userspace/ptzf/test/: ptzf_controller_message_handler_test.cpp  ptzf_controller_test.cpp  ptzf_status_test.cpp
prottype/hiraki/userspace/inc/ptzf/: ptzf_status_if.h
prottype/hiraki/userspace/power/infra/test/: power_sequencer_reboot_infra_if_marco_test.cpp
prottype/hiraki/userspace/preset/: CMakeLists.txt
prottype/hiraki/userspace/preset/infra/: preset_database_backup_infra_message_handler_marco_fake.cpp
prottype/hiraki/userspace/preset/test/: preset_manager_message_handler_new_test.cpp
prottype/hiraki/userspace/ptzf/: CMakeLists.txt  pan_tilt_limit_info_notifier_fake.cpp  pan_tilt_limit_position.cpp  pan_tilt_value_manager.cpp  ptzf_controller.h  ptzf_controller_message_handler.cpp
prottype/hiraki/userspace/ptzf/infra/: CMakeLists.txt
